Fixed overlapping bug

--- a/apps/frontend/src/index.css
+++ b/apps/frontend/src/index.css
@@ -509,3 +509,17 @@ input[type="checkbox"]:checked + label, input[type="checkbox"]:hover + label {
 body.dark g circle {
     fill: white;
 }
+
+.bouncy-boi {
+    animation: bouncy-boi 0.5s 1;
+}
+
+@keyframes bouncy-boi {
+    0%{
+        transform: translateY(-25%);
+        animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
+    }
+    100% {
+        transform: translateY(0);
+    }
+}
